# linux_app_ins_arm_prj

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  arm_linux_cross.cmake  arm_linux_cross.cmake~  auto.sh  project.org
app/: CMakeLists.txt
app/coding_frame/: CMakeLists.txt  coding_frame_creat.c  coding_frame_creat.h  hsm_ins_process.c  linux_ipc_process.c  linux_ipc_process.h  timer_period_process.c  uart_485_process.c
app/hello_world/: hello_world_thread.c  hello_world_thread.c~  misc_f.c
app/hello_world/lib/: unp.h
app/linux_peripheral/: max485_thread.c
bsp/: CMakeLists.txt
bsp/src/: bsp_buzz.c  bsp_led.c  bsp_max485.c
flib/: CMakeLists.txt
main/: CMakeLists.txt  app_config.h  app_init.c  bsp_init.c  bsp_init.h
third_lib/: state_machine.c
third_lib/c-periphery-master/: GPATH  GRTAGS  GTAGS
